[package]
name = "udp_sas_mio"
version = "0.1.2"
authors = ["Anthony Baire <ayba@free.fr>"]
description = "Source address selection for UDP mio sockets"
keywords = ["udp", "mio", "IP_PKTINFO", "IPV6_RECVPKTINFO"]
categories = ["network-programming", "os::unix-apis"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/a-ba/udp_sas_mio"
readme = "README.md"

edition = "2018"

[dependencies]
udp_sas = { git = "https://github.com/masa-koz/udp_sas", branch = "kozuka-add_support_windows" }
mio = { git = "https://github.com/tokio-rs/mio" }

[target.'cfg(target_family="windows")'.dependencies]
winapi = { version = "0.3", features = ["winsock2", "ws2def", "ws2ipdef", "ws2tcpip"] }